# rs-homo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: content.rs  error.rs  main.rs  menu.rs  streaming.rs
src/gui/: delegate.rs  mod.rs  types.rs  view.rs  window.rs
src/markdown/: mod.rs  parser.rs
src/plugins/: katex.rs  manager.rs  mermaid.rs  mod.rs
test/: example.md  test_fifo.sh  test_pipe.sh
