[package]
name = "homo"
description = "Hoss' Opinionated Markdown Output"
version = "0.1.0"
edition = "2021"

[dependencies]
# We need to add the "webview" feature to enable the WebView component.
cacao = { version = "0.3.2", features = ["appkit", "webview"] }

pulldown-cmark = "0.13.0"
atty = "0.2.14"
thiserror = "2.0.12"
open = "5.3.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
