[package]
name = "homo"
description = "Hoss' Opinionated Markdown Output"
version = "0.3.0"
edition = "2024"
authors = ["Chuan-Jhe Huang <cjhwong@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CJHwong/rs-homo"
repository = "https://github.com/CJHwong/rs-homo"
keywords = ["markdown"]
categories = ["command-line-utilities"]

[dependencies]
# We need to add the "webview" feature to enable the WebView component.
cacao = { version = "0.3.2", features = ["appkit", "webview"] }
core-foundation = "0.10.1"
cocoa = "0.26.1"
objc = "0.2.7"

pulldown-cmark = "0.13.0"
atty = "0.2.14"
thiserror = "2.0.12"
open = "5.3.2"
syntect = "5.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
